[package]
name = "expression_parser"
version = "0.1.0"
edition = "2024"
description = "A minimal Rust parser and evaluator for arithmetic expressions with variables, built using the pest parsing library. It converts a text formula into an abstract syntax tree (AST) and computes the result based on user-provided variable values."
readme = "README.md"

[dependencies]
anyhow = "1"
pest = "2.7"
pest_derive = "2.7"
regex = "1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"

